--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
                 "node": "20.x",
                 "npm": ">=7.0.0"
         },
-        "dependencies": {
+                "dependencies": {
                 "@distube/ytdl-core": "^4.13.3",
                 "axios": "^1.4.0",
                 "bcrypt": "^5.0.1",
@@ -26,6 +26,7 @@
                 "form-data": "^4.0.0",
                 "fs": "^0.0.1-security",
                 "fs-extra": "^11.1.0",
+                "got": "^11.8.3",
                 "gradient-string": "^2.0.2",
                 "graphql-query-to-json": "^2.0.1",
                 "https": "^1.0.0",
@@ -54,6 +55,7 @@
                 "ws3-fca": "latest",
                 "yt-search": "^2.13.1"
         },
+
         "scripts": {
                 "start": "node index.js",
                 "dev": "NODE_ENV=development node index.js",
