--- a/package.json
+++ b/package.json
@@ -47,12 +47,13 @@
                 "searchitunes": "^2.5.4",
                 "sequelize": "^6.19.0",
                 "socket.io": "^4.5.1",
-                "sqlite3": "^5.0.5",
+                "sqlite": "^5.1.1",
+                "sqlite3": "^5.1.7",
                 "stream": "^0.0.3",
                 "tinyurl": "^1.1.7",
                 "totp-generator": "^0.0.13",
                 "websocket-stream": "^5.5.2",
-                "ws3-fca": "latest",
+                "nexus-fca": "latest",
                 "yt-search": "^2.13.1"
         },
         "scripts": {
